--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,12 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+
+server_meditrendz/node_modules/
+server_meditrendz/dist/
+server_meditrendz/.env
+
+.DS_Store
+.env
+*.log
